Extra space issue corrected

--- a/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
+++ b/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
@@ -2218,7 +2218,7 @@ input[type='radio']:checked::before {
 
 .course_format_wrapper {
   display: flex;
-  padding: 22px 24px;
+  padding: 22px 24px 0px 24px;
   gap: 40px;
 }
 
